# BadaBib

./: README.md  com.github.rogercrocker.badabib.json  meson.build
build-aux/meson/: postinstall.py
data/: com.github.rogercrocker.badabib.appdata.xml.in  com.github.rogercrocker.badabib.desktop.in  com.github.rogercrocker.badabib.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.py  badabib.gresource.xml  badabib.in  bibfile.py  bibitem.py  change.py  config_manager.py  customization.py  default_layouts.py  dialogs.py  editor.py  forms.py  itemlist.py  layout_manager.py  main.py  main_widget.py  menus.py  meson.build  preferences.py  session_manager.py  shortcuts.ui  store.py  string_manager.py  tags.Af47kA  watcher.py  window.py
